Revision history for Hailo

{{$NEXT}}

    - Improved documentation of the Tokenizer role and the DBD class

0.24 2010-03-12 01:38:56

    - Repository metadata was wrong due to RT#55136 in
      Dist::Zilla::Plugin::Repository

    - Add some very exhaustive tests for the storage engine. This
      brings our test coverage up to 94.1% up from 92.5%. The tests
      aren't run by default to to the time they take.

    - Capitalize the first word of /^but...no/

0.23 2010-03-11 20:08:27

    - Increase test coverage, coverage is now up to 92.5%

    - Random reply tests were disabled for MySQL for no
      reason. They're now enabled.

    - Rewording the Hailo UPGRADE section

    - Re-arrange the Storage::DBD* code to be more Moosy and use roles
      as they should be used

    - Remove dead test code in Hailo::Test that was used for flat hash
      backends who couldn't generate random replies

    - Test the ->ready() storage method on all backends as part of
      Hailo::Test

    - Test Hailo::stats() on all backends as part of Hailo::Test

    - Test the bin/hailo script directly if Test::Script::Run is
      available.

0.22 2010-03-10 08:46:54

    - A Bug in Dist::Zilla ruined 0.21. The unpacked tarball contained
      home/avar/g/hailo/Hailo-0.21 instead just Hailo-0.21 at the top
      level.

0.21 2010-03-09 18:25:46
    - Word tokenizer: Various improvements to capitalization
    - Use Sys::Prctl to set legacy process name under Linux
    - Added documentation about upgrading Hailo
    - Hailo now uses Dist::Zilla instead of Module::Install to build
      releases

0.20 Sun Feb 28 00:29:32 GMT 2010

    - Use Mouse instead of Moose by default but depend on both of
      them.

      This saves about 8MB of resident memory bringing Hailo's memory
      usage with SQLite from 28MB to 20MB. Startup time is also
      reduced with the test suite running around 46% faster.

    - Run tests with Moose and Mouse during `make test`
