@@ -58,6 +58,7 @@ Test::Exception           = 0.29
 Test::More                = 0.94
 Test::Output              = 0.16
 Test::Script              = 1.07
+Test::Expect              = 0.30
 
 ; Set META.yml resources
 [MetaResources]
